compiler/testData/cli/jvm/internalArgMissingModificator.out
warning: ATTENTION!
This build uses internal compiler arguments:

-XXLanguage:InlineClasses

This mode is strictly prohibited for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

warning: incorrect internal argument syntax, missing modificator: -XXLanguage:InlineClasses
compiler/testData/cli/jvm/inlineClass.kt:1:1: error: the feature "inline classes" is only available since language version 1.3
inline class Foo(val x: Int)
^
COMPILATION_ERROR
